infrastructure/buildbarn/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildbarn
  labels:
    app.kubernetes.io/name: buildbarn
    app.kubernetes.io/part-of: eehub-infra
