infrastructure/buildbarn/base/worker.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: worker-rust
  namespace: buildbarn
  labels:
    app.kubernetes.io/name: buildbarn-worker-rust
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: eehub-infra
spec:
  selector:
    matchLabels:
      app: worker-rust
  template:
    metadata:
      labels:
        app: worker-rust
        app.kubernetes.io/name: buildbarn-worker-rust
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: eehub-infra
    spec:
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
                  - key: eehub.mingz.top/buildbarn-worker
                    operator: In
                    values:
                      - "true"
      containers:
        - name: worker
          image: ghcr.io/buildbarn/bb-worker:20260326T163248Z-e6ab874
          args:
            - /config/worker-rust.jsonnet
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
            - mountPath: /worker
              name: worker
        - name: runner
          image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:dd7654ffb01d5b7b54b23b9ce928a1f7f2d08c7b3d7e320b6574b55d7ccde78b
          command:
            - /bb/bb_runner
            - /config/runner-rust.jsonnet
          securityContext:
            runAsUser: 65534
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: "2"
              memory: 4Gi
            limits:
              cpu: "8"
              memory: 10Gi
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
            - mountPath: /worker
              name: worker
            - mountPath: /bb
              name: empty
              readOnly: true
      volumes:
        - name: empty
          emptyDir: {}
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: runner-rust.jsonnet
                path: runner-rust.jsonnet
              - key: worker-rust.jsonnet
                path: worker-rust.jsonnet
        - name: worker
          emptyDir: {}
