infrastructure/buildbarn/base/storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: buildbarn
  labels:
    app.kubernetes.io/name: buildbarn-storage
    app.kubernetes.io/component: storage
    app.kubernetes.io/part-of: eehub-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  serviceName: storage
  template:
    metadata:
      labels:
        app: storage
        app.kubernetes.io/name: buildbarn-storage
        app.kubernetes.io/component: storage
        app.kubernetes.io/part-of: eehub-infra
    spec:
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - worker1.eehub.mingz.top
      containers:
        - name: storage
          image: ghcr.io/buildbarn/bb-storage:20260326T151518Z-d0c6f26
          args:
            - /config/storage.jsonnet
          ports:
            - containerPort: 8981
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
            - mountPath: /storage-cas
              name: cas
            - mountPath: /storage-ac
              name: ac
            - mountPath: /storage-fsac
              name: fsac
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: storage.jsonnet
                path: storage.jsonnet
  volumeClaimTemplates:
    - metadata:
        name: cas
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-fast-1replica
        resources:
          requests:
            storage: 190Gi
    - metadata:
        name: ac
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-fast-1replica
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: fsac
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-fast-1replica
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: buildbarn
  labels:
    app.kubernetes.io/name: buildbarn-storage
    app.kubernetes.io/component: storage
    app.kubernetes.io/part-of: eehub-infra
spec:
  clusterIP: None
  ports:
    - name: grpc
      port: 8981
      protocol: TCP
  selector:
    app: storage
